--- a/spscss/memorygame.css
+++ b/spscss/memorygame.css
@@ -20,7 +20,8 @@
     width: 90%;
     height: 90%;
 
-    background-color: aquamarine;
+    background-color: teal;
+
 
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -42,6 +43,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    cursor: pointer;
 }
 
 .headsface {
@@ -77,17 +80,9 @@
     transform: rotateY(180deg);
 
     backface-visibility: hidden;
+
+    font-size: 3em;
 }
-
-.memcard:hover .headsface {
-    transform: rotateY(180deg);
-}
-
-.memcard:hover .tailsface {
-    transform: rotateY(0deg);
-}
-
-
 
 
 
