--- a/spscss/tictactoe.module.css
+++ b/spscss/tictactoe.module.css
@@ -1,42 +1,49 @@
 .hero {
-    background: linear-gradient(135deg, #3B0D54, #3500D3, #1A5276, #922B21, #78281F);
     width: 100vw;
-    height: 100vh;
+    height: 80vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    /* background: linear-gradient(90deg, red, green, blue); */
+    background: linear-gradient(90deg, #A7C6ED, #5B5EA6);
+
+
+}
+
+.mygrid {
+    width: 50%;
+    height: 50%;
+
+    display: grid;
+    gap: 1%;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+
+}
+
+.boardsection {
+    background-color: black;
+    width: 100%;
+    height: 100%;
+
+    cursor: pointer;
+
+    color: white;
+
+    border: 5px solid black;
+
+    font-size: 4em;
+
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 
-.board {
-    border-radius: 10px;
-    overflow: hidden;
-    width: 50%;
-    height: 50%;
-    background-color: black;
-    border: 1px solid purple;
-    display: flex;
-    flex-direction: column;
-}
-
-.row {
-    flex: 33%;
-    display: flex;
-    flex-direction: row;
-}
-
-.square {
-    flex: 33%;
-    height: 100%;
-    border: 1px solid gold;
-    cursor: pointer;
-    display: grid;
-    place-items: center;
-    font-size: 30px;
-    color: white;
-    font-family: arial;
-}
-
-.square:active {
-    background-color: #2a2a2a;
+@media screen and (max-width:600px) {
+    .hero {
+        height: 100vh
+    }
 }
